// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slack sendBookMarks should return markdown found bookmarks 1`] = `
{
  "blocks": [
    {
      "text": {
        "text": "Bookmarks",
        "type": "plain_text",
      },
      "type": "header",
    },
    {
      "type": "divider",
    },
    {
      "text": {
        "text": "*folder 1*

This is to describe the folder structure

*sub folder 1*

This is to describe the sub folder structure

•   <https://www.mywebsite.com|sample url 1> - this is used to describe the bookmark

​_These bookmarks were last updated on 28/10/2022, 16:01:30 using <https://github.com/thearegee/bookworms|Bookworms>_​
",
        "type": "mrkdwn",
      },
      "type": "section",
    },
  ],
}
`;

exports[`Slack sendBookMarks should return markdown unfound bookmarks 1`] = `
{
  "blocks": [
    {
      "text": {
        "text": "Bookmarks",
        "type": "plain_text",
      },
      "type": "header",
    },
    {
      "type": "divider",
    },
    {
      "text": {
        "text": "Sorry undefined could not be found, use \`/bookmarks all\` for a list of available bookmarks
",
        "type": "mrkdwn",
      },
      "type": "section",
    },
  ],
}
`;

exports[`Slack sendBookmarkCommands should return markdown for all commands 1`] = `
{
  "blocks": [
    {
      "text": {
        "text": "Bookmarks",
        "type": "plain_text",
      },
      "type": "header",
    },
    {
      "type": "divider",
    },
    {
      "text": {
        "text": "Bookmarks are seperated into different domains, to get the specific bookmarks you can enter the following commands

\`/bookmarks folder 1\`
\`/bookmarks folder 2\`
",
        "type": "mrkdwn",
      },
      "type": "section",
    },
  ],
}
`;
